--- a/Solution3/PresentationWebApp/appsettings.json
+++ b/Solution3/PresentationWebApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-       "DefaultConnection": "Server=DESKTOP-HVKVDSG\\SQLEXPRESS;Database=ShoppingCartDbSWD62B;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=WINDOWS-JGGHFU7;Database=EnterpriseHomeDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
