Added 2 Factor Authentication and and Input Validation

--- a/Solution3/PresentationWebApp/appsettings.Production.json
+++ b/Solution3/PresentationWebApp/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=_CHANGE_ME;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=sql5069.site4now.net;Database=DB_A6DFD1_ShoppingCartKG;User Id=DB_A6DFD1_ShoppingCartKG_admin;Password=mcast173999;Integrated Security=False;Trusted_Connection=False;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
